// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapshotExampleComponent should match the previous snapshot 1`] = `
<app-snapshot-example
  data={[Function Array]}
  title={[Function String]}
  visible="false"
>
  <p>
    snapshot-example workss!
  </p>Dit is een dynamisch titeltje<div>
    test
  </div><div>
    test2
  </div><div>
    test3
  </div>
</app-snapshot-example>
`;

exports[`SnapshotExampleComponent should match the previous snapshot with the part visible 1`] = `
<app-snapshot-example
  data={[Function Array]}
  title={[Function String]}
  visible={[Function Boolean]}
>
  <p>
    snapshot-example workss!
  </p>Dit is een dynamisch titeltje<div>
    test
  </div><div>
    test2
  </div><div>
    test3
  </div>
</app-snapshot-example>
`;
